--- a/web/css/screen.css
+++ b/web/css/screen.css
@@ -11,7 +11,7 @@ body { line-height: 1;font-family: Arial, Helvetica, sans-serif;font-size: 12px;
 #header .top { border-bottom: 2px solid #F2F2F2; margin-bottom: 10px; }
 #header ul.navigation { list-style: none; text-align: right; }
 #header .navigation li { display: inline }
-#header .navigation li a { display: inline-block; padding: 10px 15px; border-left: 1px solid #f2f2f2; }
+#header .navigation li a { display: inline-block; padding: 7px 10px; border-left: 1px solid #ffffff; }
 #header h2 { font-family:"Comic Sans MS"; font-size: 50px; text-align: left; line-height: 90px; }
 #header h2 a { color: #0c5800; }
 #header h3 { text-align: left; font-family: "Arial"; font-size: 24px; margin-bottom: 20px; font-weight: normal; }
