--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -24,7 +24,7 @@
                     <ul class="navigation">
                         <li><a href="#">Главная</a></li>
                         <li><a href="#">О нас</a></li>
-                        <li><a href="#">Контакты</a></li>
+                        <li><a href="{{ path('BlogBlogBundle_contact') }}">Контакты</a></li>
                     </ul>
                 </nav>
             {% endblock %}
