--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -22,8 +22,8 @@
             {% block navigation %}
                 <nav>
                     <ul class="navigation">
-                        <li><a href="#">Главная</a></li>
-                        <li><a href="#">О нас</a></li>
+                        <li><a href="{{ path('BlogBlogBundle_homepage') }}">Главная</a></li>
+                        <li><a href="{{ path('BlogBlogBundle_about') }}">О нас</a></li>
                         <li><a href="{{ path('BlogBlogBundle_contact') }}">Контакты</a></li>
                     </ul>
                 </nav>
@@ -31,8 +31,8 @@
         </div>
 
         <hgroup>
-            <h2>{% block blog_title %}<a href="#">Mobile Tehnologies</a>{% endblock %}</h2>
-            <h3>{% block blog_tagline %}<a href="#">Гаджеты уже стали частью нас...</a>{% endblock %}</h3>
+            <h2>{% block blog_title %}<a href="{{ path('BlogBlogBundle_homepage') }}">Mobile Tehnologies</a>{% endblock %}</h2>
+            <h3>{% block blog_tagline %}<a href="{{ path('BlogBlogBundle_homepage') }}">Гаджеты уже стали частью нас...</a>{% endblock %}</h3>
         </hgroup>
     </header>
 
